rns-lang/tests/snapshots/lexer-directives-dot_semicolon_comment.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    ; real comment
    .;not_comment ;this is also a comment
.end
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_semicolon_comment.ja:3:5 ]
   │
 3 │     .;not_comment ;this is also a comment
   │     ──────┬──────  
   │           ╰──────── Unknown directive '.;not_comment'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
