rns-lang/tests/snapshots/lexer-directives-dot_space_class.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
. class
----- STDOUT -----

----- STDERR -----
Error: unexpected character
   ╭─[ test_data/integration/lexer/directives/dot_space_class.ja:1:2 ]
   │
 1 │ . class
   │  ┬  
   │  ╰── found ' ' here
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .code
───╯
