rns-lang/tests/snapshots/lexer-directives-semicolon_right_after_dot_followed_by_a_comment.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    ; real comment
    .;not_comment ;this is also a comment
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/directives/semicolon_right_after_dot_followed_by_a_comment.ja:3:5 ]
   │
 3 │     .;not_comment ;this is also a comment
   │     ──────┬──────  
   │           ╰──────── Unknown directive '.;not_comment'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .limit, .code
───╯
